--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -1,8 +1,13 @@
-include "heroku"
-
 play.i18n.langs=["en"]
-http.port=9170
+play.server.http.port=9170
 play.assets {
   path = "/public"
   urlPrefix = "/assets"
+}
+
+play.http.secret.key="kUNSMzxg/<?qU1I_l?:2KXhV?5_ma=g7d2UsH;`wHc?fJKYj24YyT]KtCk8I2ZTL"
+
+play.filters.hosts {
+  # Allow requests to herokuapp.com and its subdomains.
+  allowed += "."
 }
