--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -11,3 +11,13 @@ play.filters.hosts {
   # Allow requests to herokuapp.com and its subdomains.
   allowed += "."
 }
+
+## Slick database configuration.
+  slick.dbs.default = {
+    db.url = "jdbc:postgresql://localhost/tasklist?user=mlewis&password=password"
+    db.url = ${?JDBC_DATABASE_URL}
+    db.driver = "org.postgresql.Driver"
+    profile = "slack.jdbc.PostgresProfiles"
+  #  connectionPool = disabled
+  #  keepAliveConnectoin = true
+  }
