--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -14,7 +14,7 @@ play.filters.hosts {
 
 ## Slick database configuration.
   slick.dbs.default = {
-    db.url = "jdbc:postgresql://localhost/tasklist?user=mlewis&password=password"
+    db.url = "jdbc:postgresql://localhost/kcadungo?user=kcadungo&password=0850099"
     db.url = ${?JDBC_DATABASE_URL}
     db.driver = "org.postgresql.Driver"
     profile = "slack.jdbc.PostgresProfiles"
