Task 9 In Progress. Changed tables

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -15,9 +15,9 @@ play.filters.hosts {
 ## Slick database configuration.
   slick.dbs.default = {
     db.url = "jdbc:postgresql://localhost/kcadungo?user=kcadungo&password=0850099"
-    db.url = ${?JDBC_DATABASE_URL}
+    #db.url = ${?JDBC_DATABASE_URL}
     db.driver = "org.postgresql.Driver"
-    profile = "slack.jdbc.PostgresProfiles"
+    profile = "slick.jdbc.PostgresProfile$"
   #  connectionPool = disabled
   #  keepAliveConnectoin = true
   }
